# quietcareer

./: .gitignore  Dockerfile  INSTALL.html  README.md  capacitor.config.ts  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.json  vercel.json
public/: manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/brag/: page.tsx
src/app/dashboard/: page.tsx
src/app/energy/: page.tsx
src/app/escape/: page.tsx
src/app/goals/: page.tsx
src/app/health/: page.tsx
src/app/journal/: layout.tsx  page.tsx
src/app/meetings/: page.tsx
src/app/more/: page.tsx
src/app/onboarding/: page.tsx
src/app/reset-password/: page.tsx
src/app/settings/: page.tsx
src/app/snapshot/: page.tsx
src/components/auth/: google-button.tsx  sign-in-button.tsx
src/components/brand/: animated-shield.tsx  daily-quote.tsx
src/components/charts/: activity-chart.tsx  career-heatmap.tsx  energy-chart.tsx  runway-chart.tsx
src/components/dashboard/: backup-reminder.tsx  inline-energy.tsx  micro-recovery.tsx  (+3 more)
src/hooks/: use-page-title.ts
src/lib/: auth-context.tsx  auto-backup.ts  crypto.ts  csv-export.ts  db.ts  field-encryption.ts  pdf-export.ts  reminders.ts  scoring.ts  settings.ts  supabase.ts  theme.tsx  utils.ts  webauthn.ts
supabase/: config.toml  schema.sql
supabase/.temp/: pooler-url  project-ref
supabase/email-templates/: confirm-signup.html  email-change.html  invite-user.html  magic-link.html  reset-password.html
(+45 files in other folders)
